test/Fail/Issue2788a.agda
module _ where

{-# BUILTIN INTERVAL I #-}
